# beads-tui

./: .botbox.json  .botbox.toml  .gitignore  AGENTS.md  Cargo.toml  README.md  opencode.json
.agents/botbox/: dev-loop.txt  last-iteration.txt
.beads/: issues.jsonl
.claude/: settings.json
scripts/: demo.sh  screenshot-tui.sh
src/: app.rs  event.rs  main.rs
src/data/: bead.rs  br.rs  mod.rs  sqlite.rs
src/ui/: create_modal.rs  detail.rs  input.rs  layout.rs  list.rs  mod.rs  theme.rs
tests/: tui.rs
tests/common/: mod.rs
