[package]
name = "beads-tui"
version = "0.2.5"
edition = "2021"
description = "A TUI for viewing and managing beads (issues)"
license = "MIT"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/your-username/beads-tui"

[[bin]]
name = "bu"
path = "src/main.rs"

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

# Database
rusqlite = { version = "0.33", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI parsing
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"

# Unix signals for Ctrl+Z suspend
nix = { version = "0.29", features = ["signal"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
