[package]
name = "beads-tui"
version = "0.11.0"
edition = "2024"
description = "A TUI for viewing and managing beads (issues)"
license = "MIT"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/your-username/beads-tui"

[[bin]]
name = "bu"
path = "src/main.rs"

[dependencies]
# TUI framework (pinned for tui-textarea compatibility)
ratatui = "0.29"
crossterm = "0.28"  # Keep at 0.28 for tui-textarea compatibility
tui-textarea = "0.7"

# Async runtime
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "time"] }

# Database
rusqlite = { version = "0.38", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"

# Unix signals for Ctrl+Z suspend
nix = { version = "0.31", features = ["signal"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.24"

[profile.release]
lto = true
codegen-units = 1
strip = true
